# TCP-Client-in-Rust

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/command_line_module/: mod.rs
src/data_to_file_append/: mod.rs
src/tcp_client/: mod.rs
src/web_sockets/: mod.rs
