[package]
name = "simple"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
binance_spot_connector_rust = {version= "1.1.0", features = ["enable-tokio-tungstenite", "enable-hyper"]}
structopt = "0.3"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
tungstenite = { version="0.21.0"}
websocket = { version="0.27.0"}
url = "2.1.0"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
env_logger = "0.10.2"
log = "0.4"